add method controller
